# ai-agent

./: .flake8  .gitignore  1system_check.sh  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  README.md  README_SIMPLE.md  SECURITY.md  dockerfile  install_elena.sh  project_structure.txt  pyproject.toml  requirements.txt  setup.py  simple_document_reader.py  simple_voice.py  start_elena.py  📁 Полная структура корневой папки.txt  📁 Структура проекта
.github/: dependabot.yml
.github/workflows/: cd.yml  cd.yml.disabled  ci.yml  cleanup.yml  format.yml  lint.yml  main_ci.yml  release.yml  release.yml.disabled  summary.yml
.github/workflows_backup/: lint.yml  voice-test.yml
Ai_Obsidian/.obsidian/: workspace.json
archive/: cleanup.py  config.example.yaml  setup.py  simple_image_analyzer.py  test_new_workflow.md
archive/migrations/: alembic.ini  env.py
archive/migrations/versions/: 004_add_vector_storage.py
configs/: config.example.yaml  env.example  learning.yaml  logging.yaml  main.yaml  memory.yaml  secrets.yaml.example  simple_config.yaml  stt.yaml  telegram.yaml  voice.yaml
data/: memory_state.pkl
data/security/: users.json
data/vectors/: chroma.sqlite3
docs/: README.md  📁 Полная структура папки.txt
migrations/: README.md  create_migrations_structure.sh
migrations/versions/: 001_initial_migration.py  002_add_users_table.py  003_add_memory_tables.py  005_add_learning_tables.py  __init__.py  📁 Структура папки.txt
requirements/: base.txt  dev.txt  requirements_simple.txt
scripts/: audit_changes.py  backup.sh  cleanup.sh  install.sh  install_rhvoice.sh  run.sh  setup.sh  stop.sh  update.sh
src/: __init__.py  main.py
src/core/: __init__.py  bootstrap.py  cognitive_loop.py
src/core/brain/: __init__.py  agent.py  cognitive_loop.py  execution.py  planning.py  reasoning.py
src/core/database/: __init__.py
src/core/learning/: README.md
src/core/memory/: __init__.py  (+5 more)
src/engines/: audio_engine.py  vision_engine.py  vision_engine.py.disabled  voice_engine.py
src/interfaces/: __init__.py  app.py
src/learning/: cleanup.py  self_improvement.py
src/memory/: memory_core.py  vector_memory.py
src/planning/: planner_stage2.py
src/security/: auth.py
src/tools/: conversation_tools.py  tool_executor.py
src/utils/: config_loader.py  logger.py
static/: generate_images.sh
static/css/: style.css
static/images/: README.md  create_images.html  create_images.py
static/js/: main.js
templates/: base.html  index.html
tests/e2e/: conftest.py  test_document_processing.py  test_full_workflow.py  test_telegram_bot.py  test_voice_assistant.py  test_web_interface.py
tests/integration/: test_integration.py
tests/unit/: test_core.py  test_memory.py
tests/vector/: __init__.py  conftest.py  test_encoding.py  test_indexing.py  test_search.py  test_similarity.py
упрощенная версия/: requirements_simple.txt
(+35 files in other folders)
